feat(settings): Sprint 21 Phase 5-1 - account deletion + logout
- Supabase RPC: delete_own_account() with SECURITY DEFINER
- AuthService.deleteAccount() calls RPC
- AuthProvider.deleteAccount() orchestrates deletion + state cleanup
- SettingsAccountSection: logout + delete account UI with confirmation
- Settings screen: new Account section before Danger Zone
- LuluIcons.logout added
- i18n: sectionAccount, deleteAccountWarning*, deleteAccountFailed/Success (en+ko)
- Migration: 005_delete_own_account.sql (run in Supabase SQL Editor)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -809,6 +809,11 @@
   "settingsLogout": "Log out",
   "settingsLogoutConfirm": "Log out?",
   "settingsNotLoggedIn": "Not logged in",
+  "sectionAccount": "Account",
+  "deleteAccountWarningData": "All records, baby info, and family data will be deleted",
+  "deleteAccountWarningAuth": "Your login account will be permanently removed",
+  "deleteAccountFailed": "Account deletion failed. Please try again.",
+  "deleteAccountSuccess": "Account deleted successfully.",
   "cryIdleTitle": "Is your baby crying?",
   "cryIdleSubtitle": "Press the button below to analyze",
   "cryRecordingTitle": "Listening to the cry",
