--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -2366,6 +2366,26 @@
   "@settingsNotLoggedIn": {
     "description": "설정 화면 - 비로그인 상태 텍스트"
   },
+  "sectionAccount": "계정",
+  "@sectionAccount": {
+    "description": "설정 화면 - 계정 섹션 헤더"
+  },
+  "deleteAccountWarningData": "모든 기록, 아기 정보, 가족 데이터가 삭제됩니다",
+  "@deleteAccountWarningData": {
+    "description": "계정 삭제 경고 - 데이터 삭제"
+  },
+  "deleteAccountWarningAuth": "로그인 계정이 영구적으로 삭제됩니다",
+  "@deleteAccountWarningAuth": {
+    "description": "계정 삭제 경고 - 인증 삭제"
+  },
+  "deleteAccountFailed": "계정 삭제에 실패했습니다. 다시 시도해주세요.",
+  "@deleteAccountFailed": {
+    "description": "계정 삭제 실패 메시지"
+  },
+  "deleteAccountSuccess": "계정이 삭제되었습니다.",
+  "@deleteAccountSuccess": {
+    "description": "계정 삭제 성공 메시지"
+  },
   "cryIdleTitle": "아기가 울고 있나요?",
   "@cryIdleTitle": {
     "description": "울음 분석 화면 - 대기 상태 제목"
