feat(core): Sprint 21 Phase 5-3 - global error monitoring
- FlutterError.onError: catches widget build/layout/painting errors
- PlatformDispatcher.instance.onError: catches async Dart isolate errors
- ErrorWidget.builder: replaces red screen with ErrorFallbackScreen
- ErrorFallbackScreen: friendly error UI with restart button
- i18n: errorUnexpectedDescription, errorRestartApp keys (en/ko)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1333,6 +1333,8 @@
   "errorNetworkCheck": "Please check your internet connection",
   "errorConnectionSlow": "Connection is slow. Try again?",
   "errorDataLoadFailed": "Failed to load data",
+  "errorUnexpectedDescription": "An unexpected error occurred.\nPlease restart the app.",
+  "errorRestartApp": "Restart App",
   "percentileMeasureNeeded": "Measurement needed",
   "percentileBelow3": "Below 3%",
   "percentileAbove97": "Above 97%",
