refactor(settings): restructure settings sections - remove Danger Zone
- [Account] section: logout only
- [Data Management] section: data reset with neutral styling
- [Account Deletion] section: delete account at bottom with red styling
- Remove "Danger Zone" section header and red border from reset
- Add i18n: settingsDataManagement, settingsAccountDeletion,
  settingsResetDescription, settingsDeleteDescription
- Version bump: 2.4.2+32 → 2.5.0+33

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -985,7 +985,10 @@
       }
     }
   },
-  "sectionDangerZone": "Danger Zone",
+  "settingsDataManagement": "Data Management",
+  "settingsAccountDeletion": "Account Deletion",
+  "settingsResetDescription": "Clear all records and start fresh",
+  "settingsDeleteDescription": "Your account and all data will be permanently deleted",
   "statusPreterm": "Preterm",
   "statusFullTerm": "Full Term",
   "addBabyMaxHint": "Up to 4 babies allowed",
