fix(daily): unify empty state visual language with weekly view
- Hide DailyGrid + FilterChips when no records exist
- Show unified empty state component (icon circle + message)
- Today: "오늘 첫 기록을 남겨보세요" / Past: "이 날의 기록이 없어요"
- Remove unused _hasAnyRecordsEver / _hasCheckedRecords fields
- Add i18n keys: dailyEmptyToday, dailyEmptyPastDay

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -552,6 +552,14 @@
       }
     }
   },
+  "dailyEmptyToday": "Start your first record today",
+  "@dailyEmptyToday": {
+    "description": "Daily view empty state - today"
+  },
+  "dailyEmptyPastDay": "No records for this day",
+  "@dailyEmptyPastDay": {
+    "description": "Daily view empty state - past day"
+  },
   "weeklyChartTitle": "Weekly Pattern",
   "weeklyChartEmptyTitle": "Not enough data\nto analyze patterns yet",
   "weeklyChartEmptyHint": "Patterns will appear after 3+ days of records",
