feat(sweet-spot): Sprint 22 Phase C-0 - SweetSpotCalculator engine
Extract sweet spot calculation into standalone SweetSpotCalculator
with 13-stage min/max wake window table (Mindell 2016, AASM 2016),
nap order correction (first -10%, last +15%), personalization
interface, and daily nap schedule calculation.

- New: SweetSpotResult model (WakeWindowRange, PersonalizedWakeWindow)
- New: SweetSpotCalculator (pure, no DateTime.now(), all injectable)
- Refactored: SweetSpotProvider delegates to SweetSpotCalculator
- New: 8 day/night split i18n keys (en + ko)
- New: 26 unit tests (all pass)
- Preserved: all 5 SweetSpotProvider getter signatures for UI compat

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -182,6 +182,34 @@
   "sweetSpotApproaching": "May get sleepy soon",
   "sweetSpotOptimal": "Good time to put down",
   "sweetSpotOvertired": "May have passed sleepy window",
+  "sweetSpotTooEarlyDay": "Still has playtime. Enjoy!",
+  "@sweetSpotTooEarlyDay": {
+    "description": "Sweet Spot v2 - too early, daytime"
+  },
+  "sweetSpotTooEarlyNight": "Still has awake time",
+  "@sweetSpotTooEarlyNight": {
+    "description": "Sweet Spot v2 - too early, nighttime"
+  },
+  "sweetSpotApproachingDay": "May get sleepy soon",
+  "@sweetSpotApproachingDay": {
+    "description": "Sweet Spot v2 - approaching, daytime"
+  },
+  "sweetSpotApproachingNight": "Bedtime is getting closer",
+  "@sweetSpotApproachingNight": {
+    "description": "Sweet Spot v2 - approaching, nighttime"
+  },
+  "sweetSpotOptimalDay": "Good time for a nap now",
+  "@sweetSpotOptimalDay": {
+    "description": "Sweet Spot v2 - optimal, daytime"
+  },
+  "sweetSpotOptimalNight": "Good time to put down now",
+  "@sweetSpotOptimalNight": {
+    "description": "Sweet Spot v2 - optimal, nighttime"
+  },
+  "sweetSpotOvertiredMessage": "May be overtired. Try putting down right away",
+  "@sweetSpotOvertiredMessage": {
+    "description": "Sweet Spot v2 - overtired message"
+  },
   "sweetSpotEmptyTitle": "Need sleep records",
   "sweetSpotEmptyTitleWithName": "Start {babyName}'s first record",
   "sweetSpotEmptyTitleDefault": "Start your first record",
