feat(sweet-spot): Sprint 22 Phase C-4 - calibrating state
Add calibrating state for 1-2 completed sleep records (today).
Shows warm learning UI with progress bar while still providing
literature-based prediction. Threshold: 3 records → normal mode.

- SweetSpotState.calibrating enum value + extension
- SweetSpotResult: completedSleepRecords, calibrationTarget, calibrationProgress
- SweetSpotCalculator: _calibrationThreshold=3, _calibratingResult() helper
- HomeProvider._notifySweetSpot(): counts today's completed sleep records
- SweetSpotProvider.recalculate(): passes completedSleepRecords param
- SweetSpotCard: _buildCalibratingCard() with LinearProgressIndicator
- i18n: 4 keys (ko + en) for calibrating messages
- Tests: 30 → 35 (5 new calibrating state tests)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -217,6 +217,27 @@
   "sweetSpotEmptyActionHint": "Tap a button below to start\nrecording feeding, sleep, or diaper",
   "sweetSpotEmptyHint": "We'll predict sleep times once you have some records",
   "sweetSpotDisclaimer": "This prediction is for reference only and may vary for each baby",
+  "sweetSpotCalibrating": "Learning your baby's sleep rhythm",
+  "@sweetSpotCalibrating": {
+    "description": "Calibrating state: learning sleep pattern"
+  },
+  "sweetSpotCalibratingProgress": "Day {current} of recording",
+  "@sweetSpotCalibratingProgress": {
+    "description": "Calibrating progress indicator",
+    "placeholders": {
+      "current": {
+        "type": "int"
+      }
+    }
+  },
+  "sweetSpotCalibratingHint": "As more sleep data is collected, predictions will become more accurate",
+  "@sweetSpotCalibratingHint": {
+    "description": "Calibrating state hint message"
+  },
+  "sweetSpotStateLabelCalibrating": "Learning",
+  "@sweetSpotStateLabelCalibrating": {
+    "description": "Sweet Spot State Label Calibrating"
+  },
   "sweetSpotNoSleepTitle": "Record sleep to start predictions",
   "sweetSpotNoSleepHint": "Once you have sleep records, we'll predict the next sleep time",
   "sweetSpotRecordSleepButton": "Record Sleep",
